busybox: add missing dependency on kernel headers in hermetic build

--- a/ports/busybox/Makefile
+++ b/ports/busybox/Makefile
@@ -1,6 +1,7 @@
 #!BOOTSTRAP
 #!BUILDTOOL src/cc if HERMETIC
 #!BUILDTOOL ports/libc if HERMETIC
+#!DEP src/kernel-headers if HERMETIC
 #!DEP ports/libc
 include ../../tools/playbit.defs.mk
 
