make: add src/cc & busybox for internal builds

--- a/ports/make/Makefile
+++ b/ports/make/Makefile
@@ -1,4 +1,7 @@
 #!BOOTSTRAP
+#!BUILDTOOL src/cc if HERMETIC
+#!BUILDTOOL ports/busybox if HERMETIC
+#
 #!DEP ports/libc [transitive]
 #!DEP ports/libunwind
 include ../../tools/playbit.defs.mk
