patch: add a few dependencies for internal builds

--- a/ports/patch/Makefile
+++ b/ports/patch/Makefile
@@ -1,4 +1,9 @@
 #!BOOTSTRAP
+#!BUILDTOOL src/cc if HERMETIC
+#!BUILDTOOL ports/libc if HERMETIC
+#!BUILDTOOL ports/busybox if HERMETIC
+#!DEP src/kernel-headers if HERMETIC
+#
 #!BUILDTOOL ports/make
 #!DEP ports/libc [transitive]
 include ../../tools/playbit.defs.mk
