make ports/perl buildtool dependency optional under regular operation since building perl takes a really long time

--- a/ports/openssl/Makefile
+++ b/ports/openssl/Makefile
@@ -5,7 +5,7 @@
 # fetch the openssl sources.
 #!BOOTSTRAP
 #!BUILDTOOL toolchain
-#!BUILDTOOL ports/perl
+#!BUILDTOOL ports/perl if HERMETIC
 #!DEP ports/libc [transitive]
 #
 include ../../tools/playbit.defs.mk
