bash: remove transitive tag from ncurses, which is staticall linked

--- a/ports/bash/Makefile
+++ b/ports/bash/Makefile
@@ -1,6 +1,6 @@
 #!BUILDTOOL toolchain
 #!DEP ports/libc [transitive]
-#!DEP ports/libncurses [transitive]
+#!DEP ports/libncurses
 include ../../tools/playbit.defs.mk
 VERSION := 5.2.26
 
