--- a/ports/libcxx/Makefile
+++ b/ports/libcxx/Makefile
@@ -1,4 +1,5 @@
 #!BUILDTOOL toolchain
+#!DEP src/kernel-headers if HERMETIC
 #!DEP ports/libc [transitive]
 #!DEP ports/libcxxabi [transitive]
 #!DEP ports/libunwind [transitive] if ARCH != "wasm32"
